--- a/MWFResourceEditor/Changelog
+++ b/MWFResourceEditor/Changelog
@@ -1,3 +1,13 @@
+2005-05-17  Alexander Olk  <xenomorph2@onlinehome.de>
+
+	* AboutDialog.cs, ByteArrayPanel.cs, ColorPanel.cs, ImagePanel.cs, IResource.cs,
+	  IResourceRenderer.cs, MainForm.cs, ResourceBase.cs, ResourceByteArray.cs,
+	  ResourceColor.cs, ResourceIcon.cs, ResourceImage.cs, ResourceListBox.cs,
+	  ResourceString.cs, ResourceType.cs, TextEntryDialog.cs, TextPanel.cs, Makefile:
+	  - Added byte array resource, color resource
+	  - removed the hashtable, ListBox collection now handles that stuff
+	  - moved some code to the ResourceListBox class
+
 2005-05-15  Alexander Olk  <xenomorph2@onlinehome.de>
 
 	* AboutDialog.cs, ImagePanel.cs, IResource.cs, IResourceRenderer.cs, MainForm.cs,
